[package]
name = "kvs"
version = "0.1.0"
authors = ["master-davidlee <18920396056@163.com>"]
description = "2020-11-04 first project"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="2.27.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"