[package]
name = "kvs"
version = "0.1.0"
authors = ["master-davidlee <18920396056@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"



[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"
